--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+
+###> Custom env vars ###
+/public/uploads/
+###< end Custom env vars ###
