--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -4,7 +4,7 @@ vich_uploader:
     mappings:
         pin_image:
             uri_prefix: /uploads/pins
-            upload_destination: '%kernel.project_dir%/public/uploads/pin'
+            upload_destination: '%kernel.project_dir%/public/uploads/pins'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
     #mappings:
     #    products:
