--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ yarn-error.log
 ###> Custom env vars ###
 /public/uploads/
 ###< end Custom env vars ###
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
