--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -1,21 +1,18 @@
 # See dos how to configure the bundle: https://symfony.com/doc/current/bundles/LiipImagineBundle/basic-usage.html
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
-    driver: "imagick"
+    driver: "gd"
 
     filter_sets:
         squared_thumbnail_medium:
             filters:
-                filters:
-                    thumbnail:
-                        size: [300, 300]
-                        mode: outbound
-                        allow_upscale: true
-
+                thumbnail:
+                    size: [300, 300]
+                    mode: outbound
+                    allow_upscale: true
         squared_thumbnail_small:
             filters:
-                filters:
-                    thumbnail:
-                        size: [200, 200]
-                        mode: outbound
-                        allow_upscale: true
+                thumbnail:
+                    size: [200, 200]
+                    mode: outbound
+                    allow_upscale: true
